--- a/Leader/View/Base.lproj/Main.storyboard
+++ b/Leader/View/Base.lproj/Main.storyboard
@@ -326,29 +326,38 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AUB-Dc-JQN">
-                                <rect key="frame" x="130" y="560" width="114" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Create Event"/>
                                 <connections>
-                                    <action selector="createEventPressed:" destination="NgY-Dn-ePG" eventType="touchUpInside" id="4iu-ze-oec"/>
+                                    <outlet property="delegate" destination="NgY-Dn-ePG" id="TuN-TG-hps"/>
                                 </connections>
-                            </button>
+                            </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dMN-6Q-73b">
                                 <rect key="frame" x="24" y="171" width="299" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="NgY-Dn-ePG" id="K8Q-GY-JU9"/>
+                                </connections>
                             </textField>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="61P-mt-5Y3">
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="61P-mt-5Y3">
                                 <rect key="frame" x="24" y="231" width="307" height="95"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="590644659.91194904">
                                     <!--2019-09-20 03:57:39 +0000-->
                                 </date>
+                                <date key="minimumDate" timeIntervalSinceReferenceDate="284036400">
+                                    <!--2010-01-01 11:00:00 +0000-->
+                                </date>
                             </datePicker>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AUB-Dc-JQN">
+                                <rect key="frame" x="139" y="425" width="114" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Create Event"/>
+                                <connections>
+                                    <action selector="createEventPressed:" destination="NgY-Dn-ePG" eventType="touchUpInside" id="4iu-ze-oec"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="wqu-tV-qby"/>
@@ -548,6 +557,7 @@
                                     <outlet property="eventCategory" destination="Sbx-rH-MBe" id="O7O-Ou-1DU"/>
                                     <outlet property="eventName" destination="e3b-qe-4PL" id="0i6-Lv-fVY"/>
                                     <outlet property="eventType" destination="XVJ-Cx-l71" id="ED5-1D-4lv"/>
+                                    <segue destination="1Qf-a5-BBj" kind="show" identifier="goToDetails" id="YDY-dD-Jl3"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -582,7 +592,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SjM-My-yMw">
-                                <rect key="frame" x="0.0" y="20" width="375" height="35"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="P9W-w1-Jhh"/>
                                 </constraints>
@@ -591,7 +601,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xxC-yI-w4e">
-                                <rect key="frame" x="15" y="75" width="360" height="20"/>
+                                <rect key="frame" x="15" y="119" width="360" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="pVt-nN-Ef2"/>
                                 </constraints>
@@ -600,7 +610,7 @@
                                 <color key="highlightedColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LVm-lT-ghB">
-                                <rect key="frame" x="15" y="55" width="360" height="20"/>
+                                <rect key="frame" x="15" y="99" width="360" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="lMg-a2-Wbn"/>
                                 </constraints>
@@ -1666,7 +1676,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="MwE-px-bY7"/>
-        <segue reference="DUQ-WW-Roz"/>
+        <segue reference="OgH-7a-myC"/>
         <segue reference="3al-01-Kou"/>
     </inferredMetricsTieBreakers>
 </document>
