Might be about to ruin everything

--- a/Leader/View/Base.lproj/Main.storyboard
+++ b/Leader/View/Base.lproj/Main.storyboard
@@ -260,9 +260,6 @@
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oLS-CB-ytW">
                                                     <rect key="frame" x="25" y="30" width="350" height="55"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="55" id="4sc-21-qPX"/>
-                                                    </constraints>
                                                     <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -472,7 +469,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L7c-68-MPv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2940" y="-1056.5217391304348"/>
+            <point key="canvasLocation" x="2969" y="-1050"/>
         </scene>
         <!--Ib Calendar Data Source-->
         <scene sceneID="38T-VX-rDC">
@@ -776,12 +773,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z7n-ct-rGt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2992.8000000000002" y="-384.55772113943033"/>
+            <point key="canvasLocation" x="3212" y="-364"/>
         </scene>
         <!--Welcome-->
         <scene sceneID="7AD-Qh-FQm">
             <objects>
-                <viewController title="Welcome" id="MAT-Zq-dLy" sceneMemberID="viewController">
+                <viewController title="Welcome" id="MAT-Zq-dLy" customClass="WelcomeVC" customModule="Leader" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fOf-eo-lOS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1200,7 +1197,7 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leader3" translatesAutoresizingMaskIntoConstraints="NO" id="BjE-LY-nT4">
-                                <rect key="frame" x="0.0" y="74" width="375.00000000000023" height="200"/>
+                                <rect key="frame" x="0.0" y="74" width="375" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="WuX-wG-7dp"/>
                                 </constraints>
@@ -1243,7 +1240,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hO1-fg-iIj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <connections>
                         <segue destination="MAT-Zq-dLy" kind="relationship" relationship="rootViewController" id="yZK-R7-vHr"/>
@@ -1281,14 +1278,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zhx-gJ-cay">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zhx-gJ-cay">
                                 <rect key="frame" x="0.0" y="44" width="375" height="623"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rwA-kV-bof">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ia9-3K-m5Z">
+                                                <rect key="frame" x="166" y="221" width="42" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    </view>
+                                </subviews>
                                 <viewLayoutGuide key="contentLayoutGuide" id="8Bg-hX-Y1l"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="eYF-2X-60f"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="zhx-gJ-cay" firstAttribute="leading" secondItem="Fdf-Oo-JNq" secondAttribute="leading" id="XHh-Fu-lYs"/>
+                            <constraint firstItem="zhx-gJ-cay" firstAttribute="trailing" secondItem="Fdf-Oo-JNq" secondAttribute="trailing" id="bck-2P-w1m"/>
+                            <constraint firstItem="zhx-gJ-cay" firstAttribute="bottom" secondItem="Fdf-Oo-JNq" secondAttribute="bottom" id="dgz-Uk-DQt"/>
+                            <constraint firstItem="zhx-gJ-cay" firstAttribute="top" secondItem="Fdf-Oo-JNq" secondAttribute="top" id="j6W-Rk-gsi"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Fdf-Oo-JNq"/>
                     </view>
                     <navigationItem key="navigationItem" id="hpW-fB-HVb"/>
@@ -1862,6 +1880,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="DUQ-WW-Roz"/>
-        <segue reference="3al-01-Kou"/>
+        <segue reference="eRh-1C-oYe"/>
     </inferredMetricsTieBreakers>
 </document>
